Revision history for perl distribution Convos

0.99_31 Not Released
 - Fix rendering "404 not found" on unknown paste
 - Fix background colors for chat and embeds
 - Fix private dialogs used to be "in red" after reconnect
 - Add "wanted_state" to Core::Connection
 - Improved rendering of highlight messages

0.99_30 2017-04-13T13:52:44+0200
 - Fix scrolling on "Join dialog" and "Help" pages #331
 - Add support for generating "recover password" link #302 #323
 - Add Convos::Plugin::Paste #328
 - Add support for sending multiline IRC messages #328
 - Using LinkEmbedder instead of Mojolicious::Plugin::LinkEmbedder
 - Will always have a default IRC server
 - Will not use unsafe secrets anymore

0.99_29 2017-03-21T23:35:17+0100
 - Fix ShareDialog plugin
 - Fix custom assets with Mojolicious::Plugin::AssetPack 1.41
 - Add production 404 and 500 pages
 - Add logging about CONVOS_HOME on startup
 - Remove "beforeConvosStart" JavaScript event
 - Bump Mojolicious version to 7.29

0.99_28 2017-03-15T01:34:20+0100
 - Fix keeping scroll at bottom in Firefox #324
 - Fix messages are grouped incorrectly on scrollback #301
 - Fix showing "Day changed" in historic messages
 - Will not mark message as "highlight" if sent by yourself

0.99_27 2017-03-01T23:20:11+0100
 - Fix going to connection dialog after connection save
 - Fix hitting enter/return inside the "Dialog name" field on "Join dialog"
 - Fix joining channel which you are already part of
 - Fix reading invite_code from config file #322
 - Will detect if Javascript is disabled and notify user
 - Add support for embedding gist and other pasted text files
 - Add support for notifications on keywords #142

0.99_26 2017-02-20T23:11:01+0100
 - Fix scrolling of sidebars and main menu
 - Change "Edit profile" to "Settings"

0.99_25 2017-02-20T22:46:07+0100
 - Fix sending server messages to the right dialog
 - Fix joining a dialog by clicking on the dialog name
 - Fix first shown channel shows all users inactive #321